--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=postgresql://neondb_owner:npg_rJpNo7KAci8O@ep-raspy-grass-adcttz89-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+PORT=5000
